--- a/portfolio/B19/works.html
+++ b/portfolio/B19/works.html
@@ -146,114 +146,12 @@
 				</div>
 			</div>
 		</header>
-		<div class="toppb">
-			<div class="toppb__container">
-				<div class="toppb__body">
-					<div class="toppb__title title">
-						<h1><span class="yellow-title">Виробництво</span> <span class="yellow-title">бетону</span></h1>
-					</div>
-					<div class="toppb__text">
-						<p>Наша компанія займається власним виробництвом товарного бетону, готового бетону, готового розчину
-							цементного, бетону кладки марок М100, М150, М200, М250, М350, М400, М450, М500, М600, М700, М800, М900
-						</p>
-					</div>
-					<div class="toppb__label">
-						<p>Сьогодні бетон є одним із найпопулярніших будівельних матеріалів. Він:</p>
-					</div>
-					<ul class="toppb__list">
-						<li class="toppb__item">міцний, надійний.</li>
-						<li class="toppb__item">вогне-, морозо-, жаростійкий.</li>
-						<li class="toppb__item">стійкий у хімічно агресивному водному та газовому середовищі.</li>
-					</ul>
-				</div>
-			</div>
-		</div>
 		<main class="page">
-			<div class="benefitspb">
-				<div class="benefitspb__container">
-					<div class="benefitspb__body">
-						<div class="benefitspb__image"></div>
-						<div class="benefitspb__title">
-							<h3>Б19 пропонує широкий асортимент бетонних/цементних розчинів для різноманітних потреб будівництва. Ми як
-								виробник бетону, завод, гарантуємо якість нашої продукції. </h3>
-						</div>
-						<div class="benefitspb__row row-benefitspb">
-							<div class="row-benefitspb__item item-benefitspb">
-								<div class="item-benefitspb__body">
-									<div class="item-benefitspb__text">
-										<p>Найпопулярніша марка, яку наш завод найбільше замовляє - <b>М 200 ПЗ</b>. За іншою класифікацією
-											- <b>В 15 ПЗ</b> (ПЗ -сильнорухлива). Вона має оптимальне для нашого географічного положення
-											співвідношення міцності та стійкості до різних кліматичних умов.
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefitspb__item item-benefitspb">
-								<div class="item-benefitspb__body">
-									<div class="item-benefitspb__text">
-										<p>
-											Здебільшого покупці орієнтуються на марку міцності бетону та його заповнювачі. Саме з цих
-											параметрів головним чином формується ціна.
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefitspb__item item-benefitspb">
-								<div class="item-benefitspb__body">
-									<div class="item-benefitspb__text">
-										<p>
-											Зазвичай для будівництва будинків або іншої інфраструктури (гаражів, майданчиків) відбувається
-											вибір між марками М100 до М400, які повністю покривають всі вимоги.
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefitspb__item item-benefitspb">
-								<div class="item-benefitspb__body">
-									<div class="item-benefitspb__text">
-										<p>
-											Бетон – це не той матеріал, на якому можна заощаджувати.
-											Будьте уважні – завжди вибирайте оптимальний для ваших робіт матеріал. У будівництві
-											найголовніше - це золоте співвідношення ціни та якості.
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="benefitspb__label">
-							<p>Весь бетон сертифікований на 100% та відповідає всім стандартам</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="eagle">
-				<div class="eagle__container">
-					<div class="eagle__body">
-						<div class="eagle__title">
-							<h2>Бетонно-змішувальна установка SIMEM EAGLE 100</h2>
-						</div>
-						<div class="eagle__slider swiper-eagle">
-							<div class="eagle__wrapper swiper-wrapper">
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-							</div>
-						</div>
-						<div class="eagle__title">
-							<h2>Система керування установки SIMEMATIC TOUCH </h2>
-						</div>
-						<div class="eagle__slider swiper-eagle">
-							<div class="eagle__wrapper swiper-wrapper">
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide1.jpg" alt="">
-								</div>
-								<div class="eagle__slide swiper-slide">
-									<img src="img/eagle/slide2.jpg" alt="">
-								</div>
-							</div>
+			<div class="works">
+				<div class="works__container">
+					<div class="works__body">
+						<div class="works__title title">
+							<h1><span class="yellow-title"><span class="yellow-title">Сторінка ще не</span> готова</span></h1>
 						</div>
 					</div>
 				</div>
