--- a/portfolio/B19/builds.html
+++ b/portfolio/B19/builds.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611164007">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611173853">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -38,10 +38,10 @@
 									<div class="contact-header__social social-header">
 										<div class="social-header__body">
 											<div class="social-header__inst">
-												<a href="#"><img src="img/header/inst-icon.svg" alt="Instagramm"></a>
+												<a href="works.html"><img src="img/header/inst-icon.svg" alt="Instagramm"></a>
 											</div>
 											<div class="social-header__facebook">
-												<a href="#"><img src="img/header/facebook-icon.svg" alt="FaceBook"></a>
+												<a href="works.html"><img src="img/header/facebook-icon.svg" alt="FaceBook"></a>
 											</div>
 										</div>
 									</div>
@@ -96,8 +96,8 @@
 										</div>
 									</div>
 									<div class="mobilemenu-header__phone"><a href="tel:+380500102800"><img src="img/header/phone-white.svg" alt="phone"></a></div>
-									<div class="mobilemenu-header__inst"><img src="img/header/inst-white.svg" alt="inst"></div>
-									<div class="mobilemenu-header__facebook"><img src="img/header/facebook-white.svg" alt="Facebook">
+									<div class="mobilemenu-header__inst"><a href="works.html"><img src="img/header/inst-white.svg" alt="inst"></a></div>
+									<div class="mobilemenu-header__facebook"><a href="works.html"><img src="img/header/facebook-white.svg" alt="Facebook"></a>
 									</div>
 									<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Поиск" class="mobilemenu__input">
 									<div class="mobilemenu-header__search"><img src="img/header/search-icon.svg" alt="Search"></div>
@@ -208,7 +208,7 @@
 								<div class="sliderb__slide swiper-slide">
 									<div class="slide-sliderb__body">
 										<div class="slide-sliderb__gradient"></div>
-										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide2.jpeg" alt="background-slide">
 										</div>
 										<div class="slide-sliderb__text">
 											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
@@ -218,7 +218,7 @@
 								<div class="sliderb__slide swiper-slide">
 									<div class="slide-sliderb__body">
 										<div class="slide-sliderb__gradient"></div>
-										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide3.jpeg" alt="background-slide">
 										</div>
 										<div class="slide-sliderb__text">
 											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
@@ -228,7 +228,7 @@
 								<div class="sliderb__slide swiper-slide">
 									<div class="slide-sliderb__body">
 										<div class="slide-sliderb__gradient"></div>
-										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide4.jpeg" alt="background-slide">
 										</div>
 										<div class="slide-sliderb__text">
 											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
@@ -238,7 +238,27 @@
 								<div class="sliderb__slide swiper-slide">
 									<div class="slide-sliderb__body">
 										<div class="slide-sliderb__gradient"></div>
-										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide5.jpeg" alt="background-slide">
+										</div>
+										<div class="slide-sliderb__text">
+											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
+										</div>
+									</div>
+								</div>
+								<div class="sliderb__slide swiper-slide">
+									<div class="slide-sliderb__body">
+										<div class="slide-sliderb__gradient"></div>
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide6.jpeg" alt="background-slide">
+										</div>
+										<div class="slide-sliderb__text">
+											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
+										</div>
+									</div>
+								</div>
+								<div class="sliderb__slide swiper-slide">
+									<div class="slide-sliderb__body">
+										<div class="slide-sliderb__gradient"></div>
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide7.jpeg" alt="background-slide">
 										</div>
 										<div class="slide-sliderb__text">
 											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
@@ -454,7 +474,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611164007"></script>
+	<script src="js/app.min.js?_v=20220611173853"></script>
 </body>
 
 </html>
