--- a/portfolio/GentleNut/index.html
+++ b/portfolio/GentleNut/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220622215641">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220623121246">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -311,162 +311,223 @@
 				<img src="img/smoothies/topborder.svg" alt="">
 			</div>
 			<div class="ratem">
+				<div class="ratem__elements-left">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-elements4"></use>
+					</svg>
+				</div>
+				<div class="ratem__element-brown">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-brown-side"></use>
+					</svg>
+				</div>
+				<div class="ratem__leafs">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-leafs"></use>
+					</svg>
+				</div>
+				<div class="ratem__bottom-right">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-elementsright5"></use>
+					</svg>
+				</div>
 				<div class="ratem__container">
 					<div class="ratem__body">
-						<div class="ratem__element-top">
-							<svg>
-								<use xlink:href="img/icons/icons.svg#svg-elements4"></use>
-							</svg>
+						<div class="ratem__block">
+							<div class="ratem__slider swiper">
+								<div class="ratem__wrapper swiper-wrapper">
+									<div class="ratem__slide ratem-slide swiper-slide">
+										<div class="ratem-slide__body">
+											<div class="ratem-slide__image">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#svg-bluefigure"></use>
+												</svg>
+												<img src="img/ratem/avatar1.png" alt="">
+											</div>
+											<div class="ratem-slide__name">
+												<h3>Константин Константинович Костантинопольский</h3>
+											</div>
+											<div class="ratem-slide__label">
+												<h4>Бариста в кофейне «Шоколадница»</h4>
+											</div>
+											<div class="ratem-slide__text">
+												<p>Горько осознавать, что все эти годы я растратил впустую! Теперь пью The gentle nut КАЖДЫЙ
+													ДЕНЬ!</p>
+											</div>
+										</div>
+									</div>
+									<div class="ratem__slide ratem-slide swiper-slide">
+										<div class="ratem-slide__body">
+											<div class="ratem-slide__image">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#svg-redfigure"></use>
+												</svg>
+												<img src="img/ratem/avatar2.png" alt="">
+											</div>
+											<div class="ratem-slide__name">
+												<h3>Ирина Робустовна Толькотурка</h3>
+											</div>
+											<div class="ratem-slide__label">
+												<h4>Бариста в кофейне «Surf coffee»</h4>
+											</div>
+											<div class="ratem-slide__text">
+												<p>Кофе — моя страсть! Без него не могу проснуться и начать жить эту жизнь. Теперь кофе как
+													десерт!</p>
+											</div>
+										</div>
+									</div>
+									<div class="ratem__slide ratem-slide swiper-slide">
+										<div class="ratem-slide__body">
+											<div class="ratem-slide__image">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#svg-yellowfigure"></use>
+												</svg>
+												<img src="img/ratem/avatar3.png" alt="">
+											</div>
+											<div class="ratem-slide__name">
+												<h3>Анечка Магистратуровна Дипломова</h3>
+											</div>
+											<div class="ratem-slide__label">
+												<h4>Студентка,кофеман со стажем</h4>
+											</div>
+											<div class="ratem-slide__text">
+												<p>С The gentle nut даже самый дешевый гранулированный кофе становится вкусным! Спасибо!</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<button type="button" class="ratem-swiper-button-prev swiper-button-prev"></button>
+							<button type="button" class="ratem-swiper-button-next swiper-button-next"></button>
 						</div>
-						<div class="ratem__element-middle">
-							<svg>
-								<use xlink:href="img/icons/icons.svg#svg-elementsbrown"></use>
-							</svg>
+					</div>
+				</div>
+			</div>
+			<div class="wherebuy">
+				<div class="wherebuy__back">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-riples-buy"></use>
+					</svg>
+				</div>
+				<div class="wherebuy__tree">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-tree"></use>
+					</svg>
+				</div>
+				<div class="wherebuy__elements">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-elementsright6"></use>
+					</svg>
+				</div>
+				<div class="wherebuy__elements-bottom">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-elements5"></use>
+					</svg>
+				</div>
+				<div class="wherebuy__container">
+					<div class="wherebuy__body">
+						<div class="wherebuy__title titleh2">
+							<h2>Где купить the gentle nut?</h2>
 						</div>
-						<div class="ratem__element-bottom-left">
-							<svg>
-								<use xlink:href="img/icons/icons.svg#svg-leafs"></use>
-							</svg>
+						<div class="wherebuy__label">
+							<h4>На полках с молочными продуктами в любимых магазинах</h4>
 						</div>
-						<div class="ratem__element-bottom-right">
-							<svg>
-								<use xlink:href="img/icons/icons.svg#svg-elementsright5.svg"></use>
-							</svg>
-						</div>
-						<div class="ratem__slider swiper">
-							<div class="ratem__wrapper swiper-wrapper">
-								<div class="ratem__slide ratem-slide swiper-slide">
-									<div class="ratem-slide__body">
-										<div class="ratem-slide__imageblock">
-											<img src="img/ratem/avatar1.png" alt="Константин">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-bluefigure"></use>
-											</svg>
+						<div class="wherebuy__slider swiper">
+							<div class="wherebuy__wrapper swiper-wrapper">
+								<div class="wherebuy__slide wherebuy-slide swiper-slide">
+									<div class="wherebuy-slide__body">
+										<div class="wherebuy-slide__image">
+											<img src="img/wherebuy/ozon.png" alt="Ozon">
 										</div>
-										<div class="ratem-slide__name labelh3">
-											<h3>Константин Константинович Константинопольский</h3>
-										</div>
-										<div class="ratem-slide__label labelh4">
-											<h4>Бариста в кофейне «Шоколадница»</h4>
-										</div>
-										<div class="ratem-slide__text">
-											<p>Горько осознавать, что все эти годы я растратил впустую! Теперь пью The gentle nut КАЖДЫЙ
-												ДЕНЬ!</p>
+										<div class="wherebuy-slide__label">
+											<h5>OZON</h5>
 										</div>
 									</div>
 								</div>
-								<div class="ratem__slide ratem-slide swiper-slide">
-									<div class="ratem-slide__body">
-										<div class="ratem-slide__imageblock red">
-											<img src="img/ratem/avatar2.png" alt="Ирина">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-redfigure"></use>
-											</svg>
+								<div class="wherebuy__slide wherebuy-slide swiper-slide">
+									<div class="wherebuy-slide__body">
+										<div class="wherebuy-slide__image">
+											<img src="img/wherebuy/perek.png" alt="Ozon">
 										</div>
-										<div class="ratem-slide__name labelh3">
-											<h3>Ирина <br> Робустовна<br> Толькотурка</h3>
-										</div>
-										<div class="ratem-slide__label labelh4">
-											<h4>Бариста в кофейне «Surf coffee»</h4>
-										</div>
-										<div class="ratem-slide__text">
-											<p>Кофе — моя страсть! Без него не могу проснуться и начать жить эту жизнь. Теперь кофе как
-												десерт!
-											<p>
+										<div class="wherebuy-slide__label">
+											<h5>Перекресток</h5>
 										</div>
 									</div>
 								</div>
-								<div class="ratem__slide ratem-slide swiper-slide">
-									<div class="ratem-slide__body">
-										<div class="ratem-slide__imageblock yellow">
-											<img src="img/ratem/avatar3.png" alt="Анна">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-yellowfigure"></use>
-											</svg>
+								<div class="wherebuy__slide wherebuy-slide swiper-slide">
+									<div class="wherebuy-slide__body">
+										<div class="wherebuy-slide__image">
+											<img src="img/wherebuy/wb.png" alt="Ozon">
 										</div>
-										<div class="ratem-slide__name labelh3">
-											<h3>Анечка Магистратуровна Дипломова</h3>
-										</div>
-										<div class="ratem-slide__label labelh4">
-											<h4>Студентка,кофеман со стажем</h4>
-										</div>
-										<div class="ratem-slide__text">
-											<p>С The gentle nut даже самый дешевый гранулированный кофе становится вкусным! Спасибо!
-											<p>
+										<div class="wherebuy-slide__label">
+											<h5>Wildberries</h5>
 										</div>
 									</div>
 								</div>
-								<div class="ratem__slide ratem-slide swiper-slide">
-									<div class="ratem-slide__body">
-										<div class="ratem-slide__imageblock">
-											<img src="img/ratem/avatar1.png" alt="Константин">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-bluefigure"></use>
-											</svg>
+								<div class="wherebuy__slide wherebuy-slide swiper-slide">
+									<div class="wherebuy-slide__body">
+										<div class="wherebuy-slide__image">
+											<img src="img/wherebuy/pyater.png" alt="Ozon">
 										</div>
-										<div class="ratem-slide__name labelh3">
-											<h3>Константин Константинович Константинопольский</h3>
-										</div>
-										<div class="ratem-slide__label labelh4">
-											<h4>Бариста в кофейне «Шоколадница»</h4>
-										</div>
-										<div class="ratem-slide__text">
-											<p>Горько осознавать, что все эти годы я растратил впустую! Теперь пью The gentle nut КАЖДЫЙ
-												ДЕНЬ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="ratem__slide ratem-slide swiper-slide">
-									<div class="ratem-slide__body">
-										<div class="ratem-slide__imageblock red">
-											<img src="img/ratem/avatar2.png" alt="Ирина">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-redfigure"></use>
-											</svg>
-										</div>
-										<div class="ratem-slide__name labelh3">
-											<h3>Ирина <br> Робустовна<br> Толькотурка</h3>
-										</div>
-										<div class="ratem-slide__label labelh4">
-											<h4>Бариста в кофейне «Surf coffee»</h4>
-										</div>
-										<div class="ratem-slide__text">
-											<p>Кофе — моя страсть! Без него не могу проснуться и начать жить эту жизнь. Теперь кофе как
-												десерт!
-											<p>
-										</div>
-									</div>
-								</div>
-								<div class="ratem__slide ratem-slide swiper-slide">
-									<div class="ratem-slide__body">
-										<div class="ratem-slide__imageblock yellow">
-											<img src="img/ratem/avatar3.png" alt="Анна">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-yellowfigure"></use>
-											</svg>
-										</div>
-										<div class="ratem-slide__name labelh3">
-											<h3>Анечка Магистратуровна Дипломова</h3>
-										</div>
-										<div class="ratem-slide__label labelh4">
-											<h4>Студентка,кофеман со стажем</h4>
-										</div>
-										<div class="ratem-slide__text">
-											<p>С The gentle nut даже самый дешевый гранулированный кофе становится вкусным! Спасибо!
-											<p>
+										<div class="wherebuy-slide__label">
+											<h5>Пятерочка</h5>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<button type="button" class="ratem__slider-prev swiper-button-prev"></button>
-						<button type="button" class="ratem__slider-next swiper-button-next"></button>
 					</div>
 				</div>
 			</div>
 		</main>
+		<div class="footer__border">
+			<img src="img/wherebuy/border.png" alt="">
+		</div>
 		<footer class="footer">
+			<div class="footer__back">
+				<svg>
+					<use xlink:href="img/icons/icons.svg#svg-ripples-footer"></use>
+				</svg>
+			</div>
+			<div class="footer__elements-left">
+				<svg>
+					<use xlink:href="img/icons/icons.svg#svg-elementsfooter"></use>
+				</svg>
+			</div>
+			<div class="footer__elements-right">
+				<svg>
+					<use xlink:href="img/icons/icons.svg#svg-elementsfooterright"></use>
+				</svg>
+			</div>
 			<div class="footer__container">
+				<div class="footer__body">
+					<div class="footer__logo">
+						<svg>
+							<use xlink:href="img/icons/icons.svg#svg-logo"></use>
+						</svg>
+					</div>
+					<div class="footer__block block-footer">
+						<div class="block-footer__body">
+							<div class="block-footer__logo">
+								<svg>
+									<use xlink:href="img/icons/icons.svg#svg-favoritlogo"></use>
+								</svg>
+							</div>
+							<div class="block-footer__label">
+								<h3>Эксклюзивный дистрибьютер: ООО «Фаворит»</h3>
+							</div>
+							<div class="block-footer__contactblock contactblock-footer">
+								<div class="contactblock-footer__body">
+									<ul class="contactblock-footer__list">
+										<li class="contactblock-footer__item">8 800 733 75 75</li>
+										<li class="contactblock-footer__item">gtn@favoritfood.ru</li>
+										<li class="contactblock-footer__item">favoritfood.ru</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</footer>
 	</div>
@@ -480,7 +541,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220622215641"></script>
+	<script src="js/app.min.js?_v=20220623121246"></script>
 </body>
 
 </html>
