--- a/portfolio/GentleNut/about.html
+++ b/portfolio/GentleNut/about.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Главная</title>
+	<title>О продкуте</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -37,114 +37,69 @@
 			</div>
 		</div>
 		<main class="page">
-			<div class="topm">
-
-				<div class="topm__body">
-					<div class="topm__slider swiper">
-						<div class="topm__wrapper swiper-wrapper">
-							<div class="topm__slide swiper-slide topm-slide">
-								<div class="topm-slide__body">
-									<div class="topm-slide__img">
-										<img src="img/topm/slide1.jpg" alt="background">
-									</div>
-									<div class="topm-slide__title titleh1">
-										<h1>ореховое молоко</h1>
-									</div>
-									<div class="topm-slide__descr">
-										<p>Потрясающее ореховое молоко The gentle nut — лучший усилитель вкуса жизни.</p>
-									</div>
-									<div class="topm-slide__button button">
-										<svg>
-											<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
-										</svg>
-										<a href="#" class="topm-slide__btn btn">В каталог</a>
-									</div>
-								</div>
-							</div>
-							<div class="topm__slide swiper-slide topm-slide">
-								<div class="topm-slide__body">
-									<div class="topm-slide__img">
-										<img src="img/topm/slide2.jpg" alt="background">
-									</div>
-									<div class="topm-slide__title titleh1">
-										<h1>barista pro</h1>
-									</div>
-									<div class="topm-slide__descr">
-										<p>Бариста рекомендуют использоватьThe gentle nut, чтобы разнообразить вашу кофейную карту.</p>
-									</div>
-									<div class="topm-slide__button button">
-										<svg>
-											<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
-										</svg>
-										<a href="#" class="topm-slide__btn btn">В каталог</a>
-									</div>
-								</div>
-							</div>
-
+			<div class="topa">
+				<div class="topa__container">
+					<div class="topa__body">
+						<div class="topa__image">
+							<img src="img/topa/33333.jpg" alt="Молоко">
 						</div>
-						<div class="swiper-pagination"></div>
+						<div class="topa__block block-topa">
+							<div class="block-topa__body">
+								<div class="block-topa__title titleh1">
+									<h1>ежедневная польза</h1>
+								</div>
+								<div class="block-topa__text labelh5">
+									<p>THE GENTLE NUT — это молоко на основе орехов кешью. Молоко из кешью является отличной альтернативой
+										обычному, обладает легкойкремовой текстурой и тонким ореховым вкусом.
+										В нем витаминов больше, чем где бы то ни было!</p>
+								</div>
+								<div class="block-topa__button button">
+									<svg>
+										<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
+									</svg>
+									<a href="#" class="block-topa__btn btn">В каталог</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="topm__border">
-				<img src="img/topm/border.png" alt="">
+			<div class="why__border">
+				<img src="img/newtype/border.png" alt="">
 			</div>
-			<div class="newtype">
-				<div class="newtype__elements">
+			<div class="why">
+				<div class="why__tree">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-tree"></use>
+					</svg>
+				</div>
+				<div class="why__yellow">
+					<svg>
+						<use xlink:href="img/icons/icons.svg#svg-yellowgroup"></use>
+					</svg>
+				</div>
+				<div class="why__elements">
 					<svg>
 						<use xlink:href="img/icons/icons.svg#svg-ellements1"></use>
 					</svg>
 				</div>
-				<div class="newtype__container">
-					<div class="newtype__tree">
-						<svg>
-							<use xlink:href="img/icons/icons.svg#svg-tree"></use>
-						</svg>
-					</div>
-					<div class="newtype__yellow">
-						<svg>
-							<use xlink:href="img/icons/icons.svg#svg-yellowgroup"></use>
-						</svg>
-					</div>
-					<div class="newtype__body">
-
-						<div class="newtype__col col-left col-newtype hide">
-							<div class="col-newtype__body col-left">
-								<div class="col-newtype__image">
-									<img src="img/newtype/handmilk.png" alt="Hand">
-								</div>
-								<div class="col-newtype__item item1">
-									<h3>80%</h3>
-									<p>молока кешью</p>
-								</div>
-								<div class="col-newtype__item item2">
-									<h3>60%</h3>
-									<p>молока кокоса</p>
-								</div>
-								<div class="col-newtype__item item3">
-									<h3>25%</h3>
-									<p>дневной нормы кальция</p>
-								</div>
-								<div class="col-newtype__item item4">
-									<h3>35%</h3>
-									<p>дневной нормы клетчатки</p>
-								</div>
+				<div class="why__container">
+					<div class="why__body">
+						<div class="why__block block-why">
+							<div class="block-why__titleh2 titleh2">
+								<h2>Для чего нужен
+									the gentle nut?</h2>
+							</div>
+							<div class="block-why__text labelh5">
+								<p>Оно идеально подходит для различных смузи и может быть прекрасным дополнением к утренней каше, мюсли
+									или ежедневной чашечке кофе. Независимо от того, веган вы или нет, попробуйте разнообразить свой
+									рацион молоком из кешью.</p>
 							</div>
 						</div>
-						<div class="newtype__col col-right col-newtype">
-							<div class="col-newtype__body col-right">
-								<div class="col-newtype__title titleh2">
-									<h2>Новый вид молока</h2>
-								</div>
-								<div class="col-newtype__descr">
-									<p>Для тех, кто не боится пробовать что-то новое! Нежный ореховый вкус для поддержанияздоровья
-										пищеварительной системы.
-										С клетчаткой, пребиотиками, витаминамии растительными компонентами.
-										Налетай, торопись, покупай the gentle nut!</p>
-								</div>
-							</div>
+						<div class="why__image">
+							<img src="img/why/back.png" alt="">
 						</div>
-						<div class="newtype__ripple">
+						<div class="why__ripple">
 							<svg>
 								<use xlink:href="img/icons/icons.svg#svg-ripples-new"></use>
 							</svg>
@@ -152,163 +107,87 @@
 					</div>
 				</div>
 			</div>
-			<div class="bestsellers">
-				<div class="bestsellers__container">
-					<div class="bestsellers__body">
-						<div class="bestsellers__title titleh2">
-							<h2>Бестселлеры!</h2>
+			<div class="who">
+				<div class="who__container">
+					<div class="who__body">
+						<div class="who__image">
+							<img src="img/who/lady.jpg" alt="Для кого?">
 						</div>
-						<div class="bestsellers__slider swiper">
-							<div class="bestsellers__wrapper swiper-wrapper">
-								<div class="bestsellers__slide bestsellers-slide swiper-slide">
-									<div class="bestsellers-slide__body">
-										<div class="bestsellers-slide__img">
-											<img src="img/bestsellers/item1.png" alt="Кешью Бариста">
-										</div>
-										<div class="bestsellers-slide__label label">
-											<h3>Кешью бариста</h3>
-										</div>
-										<div class="bestsellers-slide__button button">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
-											</svg>
-											<a href="#" class="bestsellers-slide__btn btn">Узнать
-												подробнее</a>
-										</div>
-									</div>
+						<div class="who__block block-who">
+							<div class="block-who__body">
+								<div class="block-who__title titleh2">
+									<h2>Для кого<br> the gentle nut?</h2>
 								</div>
-								<div class="bestsellers__slide bestsellers-slide swiper-slide">
-									<div class="bestsellers-slide__body">
-										<div class="bestsellers-slide__img">
-											<img src="img/bestsellers/item2.png" alt="Кокос Бариста">
-										</div>
-										<div class="bestsellers-slide__label label">
-											<h3>кокос бариста</h3>
-										</div>
-										<div class="bestsellers-slide__button button">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
-											</svg>
-											<a href="#" class="bestsellers-slide__btn btn">Узнать
-												подробнее</a>
-										</div>
-									</div>
-								</div>
-								<div class="bestsellers__slide bestsellers-slide swiper-slide">
-									<div class="bestsellers-slide__body">
-										<div class="bestsellers-slide__img">
-											<img src="img/bestsellers/item3.png" alt="Кешью Фундук">
-										</div>
-										<div class="bestsellers-slide__label label">
-											<h3>Кешью фундук</h3>
-										</div>
-										<div class="bestsellers-slide__button button">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
-											</svg>
-											<a href="#" class="bestsellers-slide__btn btn">Узнать
-												подробнее</a>
-										</div>
-									</div>
-								</div>
-								<div class="bestsellers__slide bestsellers-slide swiper-slide">
-									<div class="bestsellers-slide__body">
-										<div class="bestsellers-slide__img">
-											<img src="img/bestsellers/item4.png" alt="Кешью Банан">
-										</div>
-										<div class="bestsellers-slide__label label">
-											<h3>Кешью банан</h3>
-										</div>
-										<div class="bestsellers-slide__button button">
-											<svg>
-												<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
-											</svg>
-											<a href="#" class="bestsellers-slide__btn btn">Узнать
-												подробнее</a>
-										</div>
-									</div>
+								<div class="block-who__text labelh5">
+									<p>THE GENTLE NUT — это 100% растительный продукт для веганов и вегетарианцев. Ореховое молоко также
+										подойдет для людей с лактазной недостаточностью и аллергией на белок коровьего молока.</p>
+									<p>Интересный факт: пакистанские борцы кушти называют ореховое молоко на основе кешью, миндаля и
+										фундука своим секретом силы и выносливости. Пакистанские борцы ерунду не посоветуют! Пейте THE
+										GENTLE NUT и станете сильными, смелыми, ловкими и умелыми!</p>
 								</div>
 							</div>
-							<button type="button" class="bestsellers-slider-button-prev swiper-button-prev"></button>
-							<button type="button" class="bestsellers-slider-button-next swiper-button-next"></button>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="smoothies__topborder">
+			<div class="technology__topborder">
 				<img src="img/smoothies/topborder.svg" alt="">
 			</div>
-			<div class="smoothies">
-				<div class="smoothies__elements-top-right">
+			<div class="technology">
+				<div class="technology__elements-top-right">
 					<svg>
-						<use xlink:href="img/icons/icons.svg#svg-elementsright2"></use>
+						<use xlink:href="img/icons/icons.svg#svg-elementswhoright"></use>
 					</svg>
 				</div>
-				<div class="smoothies__elements-top">
+				<div class="technology__elements-top">
 					<svg>
-						<use xlink:href="img/icons/icons.svg#svg-elements2"></use>
+						<use xlink:href="img/icons/icons.svg#svg-elementswho"></use>
 					</svg>
 				</div>
-				<div class="smoothies__back">
+				<div class="technology__back">
 					<svg>
 						<use xlink:href="img/icons/icons.svg#svg-ripples-smoosie"></use>
 					</svg>
 				</div>
-				<div class="smoothies__bottom-left">
-					<svg>
-						<use xlink:href="img/icons/icons.svg#svg-elements3"></use>
-					</svg>
-				</div>
-				<div class="smoothies__container">
-					<div class="smoothies__body">
-
-						<div class="smoothies__col col-smoothies left">
-							<div class="col-smoothies__body left">
-								<div class="col-smoothies__title titleh2">
-									<h2>Смузи</h2>
-								</div>
-								<div class="col-smoothies__label labelh2">
-									<h2>Кокос с клубникой</h2>
-								</div>
-								<div class="col-smoothies__timeblock timeblock-smoothies">
-									<div class="timeblock-smoothies__body">
-										<div class="timeblock-smoothies__image">
-											<img src="img/smoothies/clock.png" alt="">
-										</div>
-										<div class="timeblock-smoothies__time">
-											<h4>10 минут</h4>
-										</div>
-									</div>
-								</div>
-								<ol class="col-smoothies__list">
-									<li class="col-smoothies__item">Все ингредиенты порезать кубиками и добавить в блендер.</li>
-									<li class="col-smoothies__item">Смешать в блендере в течение 1–2 минут до однородной массы.</li>
-									<li class="col-smoothies__item">Перелить в стакан.</li>
-								</ol>
-								<div class="col-smoothies__button button">
-									<svg>
-										<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
-									</svg>
-									<a href="#" class="col-smoothies__btn btn">Больше рецептов</a>
+				<div class="technology__container">
+					<div class="technology__body">
+						<div class="technology__title titleh2">
+							<h2>Технология производства</h2>
+						</div>
+						<div class="technology__image">
+							<img src="img/base/steps.svg" alt="Шаги">
+						</div>
+						<div class="technology__row row-technology labelh5">
+							<div class="row-technology__item item-technology">
+								<div class="item-technology__body">
+									<ul class="item-technology__list">
+										<li class="item-technology__item">Каждый год летом веселые негритянки с песнями собирают урожай
+											орехов.</li>
+										<li class="item-technology__item">Мы отбираем только самые крупные орехи кешью для нашего
+											замечательного напитка!</li>
+										<li class="item-technology__item">Все орешки тщательно моют маленькие волшебные карлики своими
+											маленькими ручками. После чего перемалывают и добавляют натуральные фруктовые добавки.</li>
+									</ul>
 								</div>
 							</div>
-						</div>
-						<div class="smoothies__col col-smoothies right">
-							<div class="col-smoothies__body right">
-								<div class="col-smoothies__image">
-									<img src="img/smoothies/milk.png" alt="Молоко">
-								</div>
-								<div class="col-smoothies__figure">
-									<svg>
-										<use xlink:href="img/icons/icons.svg#svg-figure"></use>
-									</svg>
+							<div class="row-technology__item item-technology">
+								<div class="item-technology__body">
+									<ul class="item-technology__list">
+										<li class="item-technology__item">Затем все ингредиенты смешивают и взбивают в огромном блендере.
+										</li>
+										<li class="item-technology__item">Этап пастеризации и асептического розлива орехового молока по
+											коробкам тетрапак никак пропустить нелья.</li>
+										<li class="item-technology__item">Когда все разлито по коробкам товар сррррочно везут в магазины и
+											расставляют на полки.Только попробуйте теперь не восхититься нашим ореховым молоком! Оно супер!
+										</li>
+									</ul>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="smoothies__bottomborder">
+			<div class="technology__bottomborder">
 				<img src="img/smoothies/topborder.svg" alt="">
 			</div>
 			<div class="ratem">
