--- a/portfolio/GentleNut/about.html
+++ b/portfolio/GentleNut/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220624115402">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220624162415">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,9 +24,9 @@
 						</a>
 						<nav class="menu__body">
 							<ul class="menu__list">
-								<li class="menu__item main"><a href="#" class="menu__link">Главная</a></li>
+								<li class="menu__item main"><a href="index.html" class="menu__link">Главная</a></li>
 								<li class="menu__item"><a href="about.html" class="menu__link">О продукте</a></li>
-								<li class="menu__item"><a href="#" class="menu__link">Каталог</a></li>
+								<li class="menu__item"><a href="catalog.html" class="menu__link">Каталог</a></li>
 								<li class="menu__item"><a href="#" class="menu__link">Рецепты</a></li>
 								<li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
 							</ul>
@@ -421,7 +421,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220624115402"></script>
+	<script src="js/app.min.js?_v=20220624162415"></script>
 </body>
 
 </html>
