--- a/portfolio/GentleNut/about.html
+++ b/portfolio/GentleNut/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220624162415">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220624172011">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -154,8 +154,33 @@
 						<div class="technology__title titleh2">
 							<h2>Технология производства</h2>
 						</div>
-						<div class="technology__image">
-							<img src="img/base/steps.svg" alt="Шаги">
+						<div class="technology__slider swiper">
+							<div class="technology__wrapper swiper-wrapper">
+								<div class="technology__slide swiper-slide">
+									<img src="img/technology/history-1.svg" alt="">
+								</div>
+								<div class="technology__slide swiper-slide">
+									<img src="img/technology/history-2.svg" alt="">
+								</div>
+								<div class="technology__slide swiper-slide">
+									<img src="img/technology/history-3.svg" alt="">
+								</div>
+								<div class="technology__slide swiper-slide">
+									<img src="img/technology/history-4.svg" alt="">
+								</div>
+								<div class="technology__slide swiper-slide">
+									<img src="img/technology/history-5.svg" alt="">
+								</div>
+								<div class="technology__slide swiper-slide">
+									<img src="img/technology/history-6.svg" alt="">
+								</div>
+								<div class="technology__slide swiper-slide">
+									<img src="img/technology/history-7.svg" alt="">
+								</div>
+								<div class="technology__slide swiper-slide">
+									<img src="img/technology/history-8.svg" alt="">
+								</div>
+							</div>
 						</div>
 						<div class="technology__row row-technology labelh5">
 							<div class="row-technology__item item-technology">
@@ -421,7 +446,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220624162415"></script>
+	<script src="js/app.min.js?_v=20220624172011"></script>
 </body>
 
 </html>
