--- a/portfolio/GentleNut/about.html
+++ b/portfolio/GentleNut/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220624172011">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220624203706">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
 			<div class="header__container">
 				<div class="header__body">
 					<div class="header__menu menu">
-						<a href=""><svg>
+						<a href="index.html"><svg>
 								<use xlink:href="img/icons/icons.svg#svg-logo"></use>
 							</svg>
 						</a>
@@ -27,7 +27,7 @@
 								<li class="menu__item main"><a href="index.html" class="menu__link">Главная</a></li>
 								<li class="menu__item"><a href="about.html" class="menu__link">О продукте</a></li>
 								<li class="menu__item"><a href="catalog.html" class="menu__link">Каталог</a></li>
-								<li class="menu__item"><a href="#" class="menu__link">Рецепты</a></li>
+								<li class="menu__item"><a href="recipes.html" class="menu__link">Рецепты</a></li>
 								<li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
 							</ul>
 						</nav>
@@ -446,7 +446,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220624172011"></script>
+	<script src="js/app.min.js?_v=20220624203706"></script>
 </body>
 
 </html>
