--- a/portfolio/GentleNut/recipes.html
+++ b/portfolio/GentleNut/recipes.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220624203706">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220625112737">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 								<li class="menu__item"><a href="about.html" class="menu__link">О продукте</a></li>
 								<li class="menu__item"><a href="catalog.html" class="menu__link">Каталог</a></li>
 								<li class="menu__item"><a href="recipes.html" class="menu__link">Рецепты</a></li>
-								<li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+								<li class="menu__item"><a href="item.html" class="menu__link">Контакты</a></li>
 							</ul>
 						</nav>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
@@ -993,7 +993,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220624203706"></script>
+	<script src="js/app.min.js?_v=20220625112737"></script>
 </body>
 
 </html>
