--- a/portfolio/GentleNut/about.html
+++ b/portfolio/GentleNut/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220625112737">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220625145644">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 								<li class="menu__item"><a href="about.html" class="menu__link">О продукте</a></li>
 								<li class="menu__item"><a href="catalog.html" class="menu__link">Каталог</a></li>
 								<li class="menu__item"><a href="recipes.html" class="menu__link">Рецепты</a></li>
-								<li class="menu__item"><a href="item.html" class="menu__link">Контакты</a></li>
+								<li class="menu__item"><a href="contact.html" class="menu__link">Контакты</a></li>
 							</ul>
 						</nav>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
@@ -424,9 +424,10 @@
 							<div class="block-footer__contactblock contactblock-footer">
 								<div class="contactblock-footer__body">
 									<ul class="contactblock-footer__list">
-										<li class="contactblock-footer__item">8 800 733 75 75</li>
-										<li class="contactblock-footer__item">gtn@favoritfood.ru</li>
-										<li class="contactblock-footer__item">favoritfood.ru</li>
+										<li class="contactblock-footer__item"><a href="tel:88007337575">8 800 733 75 75</a></li>
+										<li class="contactblock-footer__item"><a href="mailto:gtn@favoritfood.ru">gtn@favoritfood.ru</a>
+										</li>
+										<li class="contactblock-footer__item"><a href="favoritfood.ru">favoritfood.ru</a></li>
 									</ul>
 								</div>
 							</div>
@@ -446,7 +447,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220625112737"></script>
+	<script src="js/app.min.js?_v=20220625145644"></script>
 </body>
 
 </html>
