--- a/portfolio/GentleNut/item.html
+++ b/portfolio/GentleNut/item.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220625112737">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220625145644">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 								<li class="menu__item"><a href="about.html" class="menu__link">О продукте</a></li>
 								<li class="menu__item"><a href="catalog.html" class="menu__link">Каталог</a></li>
 								<li class="menu__item"><a href="recipes.html" class="menu__link">Рецепты</a></li>
-								<li class="menu__item"><a href="item.html" class="menu__link">Контакты</a></li>
+								<li class="menu__item"><a href="contact.html" class="menu__link">Контакты</a></li>
 							</ul>
 						</nav>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
@@ -52,7 +52,7 @@
 					<div class="topi__body">
 						<div class="topi__slider swiper">
 							<div class="topi__wrapper swiper-wrapper">
-								<div class="topi__slide topi-slide swiper-slide">
+								<div class="topi__slide topi-slide swiper-slide" data-hash="barista-mindal">
 									<div class="topi-slide__body">
 										<div class="topi-slide__image">
 											<img src="img/items/TGN_barista-almond.png" alt="Кешью миндаль">
@@ -82,7 +82,37 @@
 										</div>
 									</div>
 								</div>
-								<div class="topi__slide topi-slide swiper-slide">
+								<div class="topi__slide topi-slide swiper-slide" data-hash="barista-cashew">
+									<div class="topi-slide__body">
+										<div class="topi-slide__image">
+											<img src="img/items/TGN_barista-cashew.png" alt="Кешью бариста">
+										</div>
+										<div class="topi-slide__block block-topi">
+											<div class="block-topi__body">
+												<div class="block-topi__title labelh2">
+													<h2>the gentle nut кешью бариста</h2>
+												</div>
+												<div class="block-topi__label">
+													<h4>Напиток ореховый «Кешью Миндаль» — это самое нежное, что когда-либо могло изобрести
+														человечество! Весенний ветерок, поцелуй ребенка и лепестки роз покажутся черствыми
+														сухарями, по сравнению с нашим замечательным миндальным молоком.</h4>
+												</div>
+												<div class="block-topi__text">
+													<p>Состав: вода питьевая, сахар, орехи 3% (орех кешью (2%), миндаль (1%), подсолнечное
+														масло, минеральная добавка (трикальций фосфат (источник кальция)), соль, натуральный
+														ароматизатор Миндаль, стабилизатор — геллановая камедь. Содержит орех кешью, миндаль.
+														Может содержать следы других орехов (кроме арахиса).</p>
+													<p>Энергетическая ценность (калорийность) на 100 г напитка: 113 кДж/27 ккал.</p>
+													<p>Пищевая ценность (расчетная) на 100 г напитка: белки — 0,5 г, жиры — 1,0 г, углеводы —
+														4,1 г, кальций — 120 мг.</p>
+													<p>Срок годности: 12 месяцев</p>
+													<p>Объем: 1000 мл</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="topi__slide topi-slide swiper-slide" data-hash="slide2">
 									<div class="topi-slide__body">
 										<div class="topi-slide__image">
 											<img src="img/items/TGN_barista-banana.png" alt="Кешью миндаль">
@@ -112,8 +142,38 @@
 										</div>
 									</div>
 								</div>
-								<div class="topi__slide topi-slide swiper-slide">
-									<div class="topi-slide__body">
+								<div class="topi__slide topi-slide swiper-slide" data-hash="slide3">
+									<div class=" topi-slide__body">
+										<div class="topi-slide__image">
+											<img src="img/items/TGN-classic-barista.png" alt="Кешью миндаль">
+										</div>
+										<div class="topi-slide__block block-topi">
+											<div class="block-topi__body">
+												<div class="block-topi__title labelh2">
+													<h2>the gentle nut кешью миндаль</h2>
+												</div>
+												<div class="block-topi__label">
+													<h4>Напиток ореховый «Кешью Миндаль» — это самое нежное, что когда-либо могло изобрести
+														человечество! Весенний ветерок, поцелуй ребенка и лепестки роз покажутся черствыми
+														сухарями, по сравнению с нашим замечательным миндальным молоком.</h4>
+												</div>
+												<div class="block-topi__text">
+													<p>Состав: вода питьевая, сахар, орехи 3% (орех кешью (2%), миндаль (1%), подсолнечное
+														масло, минеральная добавка (трикальций фосфат (источник кальция)), соль, натуральный
+														ароматизатор Миндаль, стабилизатор — геллановая камедь. Содержит орех кешью, миндаль.
+														Может содержать следы других орехов (кроме арахиса).</p>
+													<p>Энергетическая ценность (калорийность) на 100 г напитка: 113 кДж/27 ккал.</p>
+													<p>Пищевая ценность (расчетная) на 100 г напитка: белки — 0,5 г, жиры — 1,0 г, углеводы —
+														4,1 г, кальций — 120 мг.</p>
+													<p>Срок годности: 12 месяцев</p>
+													<p>Объем: 1000 мл</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="topi__slide topi-slide swiper-slide" data-hash="slide3">
+									<div class=" topi-slide__body">
 										<div class="topi-slide__image">
 											<img src="img/items/TGN-classic-barista.png" alt="Кешью миндаль">
 										</div>
@@ -453,9 +513,10 @@
 							<div class="block-footer__contactblock contactblock-footer">
 								<div class="contactblock-footer__body">
 									<ul class="contactblock-footer__list">
-										<li class="contactblock-footer__item">8 800 733 75 75</li>
-										<li class="contactblock-footer__item">gtn@favoritfood.ru</li>
-										<li class="contactblock-footer__item">favoritfood.ru</li>
+										<li class="contactblock-footer__item"><a href="tel:88007337575">8 800 733 75 75</a></li>
+										<li class="contactblock-footer__item"><a href="mailto:gtn@favoritfood.ru">gtn@favoritfood.ru</a>
+										</li>
+										<li class="contactblock-footer__item"><a href="favoritfood.ru">favoritfood.ru</a></li>
 									</ul>
 								</div>
 							</div>
@@ -475,7 +536,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220625112737"></script>
+	<script src="js/app.min.js?_v=20220625145644"></script>
 </body>
 
 </html>
