--- a/portfolio/GentleNut/catalog.html
+++ b/portfolio/GentleNut/catalog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220625112737">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220625145644">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 								<li class="menu__item"><a href="about.html" class="menu__link">О продукте</a></li>
 								<li class="menu__item"><a href="catalog.html" class="menu__link">Каталог</a></li>
 								<li class="menu__item"><a href="recipes.html" class="menu__link">Рецепты</a></li>
-								<li class="menu__item"><a href="item.html" class="menu__link">Контакты</a></li>
+								<li class="menu__item"><a href="contact.html" class="menu__link">Контакты</a></li>
 							</ul>
 						</nav>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
@@ -160,7 +160,7 @@
 											<use xlink:href="img/icons/icons.svg#svg-leafs"></use>
 										</svg>
 									</div>
-									<div class="body-tabs__title titleh2 green">
+									<div class="body-tabs__title-topc titleh2 green">
 										<h2>the gentle nut classic</h2>
 									</div>
 									<div class="body-tabs__text labelh5">
@@ -388,7 +388,7 @@
 										<button type="button" class="bestsellers-slider-button-next swiper-button-next"></button>
 									</div>
 									<!-- sport                   -->
-									<div class="body-tabs__title titleh2 blue">
+									<div class="body-tabs__title-topc titleh2 blue">
 										<h2>the gentle nut barista</h2>
 									</div>
 									<div class="body-tabs__text labelh5 width">
@@ -408,7 +408,7 @@
 													<svg>
 														<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
 													</svg>
-													<a href="#" class="bestsellers-slide__btn btn">Узнать
+													<a href="item.html#barista-mindal" class="bestsellers-slide__btn btn">Узнать
 														подробнее</a>
 												</div>
 											</div>
@@ -428,7 +428,7 @@
 													<svg>
 														<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
 													</svg>
-													<a href="#" class="bestsellers-slide__btn btn">Узнать
+													<a href="item.html#barista-cashew" class="bestsellers-slide__btn btn">Узнать
 														подробнее</a>
 												</div>
 											</div>
@@ -462,7 +462,7 @@
 													<svg>
 														<use xlink:href="img/icons/icons.svg#svg-buttons"></use>
 													</svg>
-													<a href="#" class="bestsellers-slide__btn btn">Узнать
+													<a href="/item.html#slide2" class="bestsellers-slide__btn btn">Узнать
 														подробнее</a>
 												</div>
 											</div>
@@ -581,7 +581,7 @@
 									</div>
 								</div>
 								<div class="topc-tabs__body">
-									<div class="body-tabs__title titleh2 green">
+									<div class="body-tabs__title-topc titleh2 green">
 										<h2>the gentle nut classic</h2>
 									</div>
 									<div class="body-tabs__text labelh5">
@@ -1026,9 +1026,10 @@
 							<div class="block-footer__contactblock contactblock-footer">
 								<div class="contactblock-footer__body">
 									<ul class="contactblock-footer__list">
-										<li class="contactblock-footer__item">8 800 733 75 75</li>
-										<li class="contactblock-footer__item">gtn@favoritfood.ru</li>
-										<li class="contactblock-footer__item">favoritfood.ru</li>
+										<li class="contactblock-footer__item"><a href="tel:88007337575">8 800 733 75 75</a></li>
+										<li class="contactblock-footer__item"><a href="mailto:gtn@favoritfood.ru">gtn@favoritfood.ru</a>
+										</li>
+										<li class="contactblock-footer__item"><a href="favoritfood.ru">favoritfood.ru</a></li>
 									</ul>
 								</div>
 							</div>
@@ -1048,7 +1049,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220625112737"></script>
+	<script src="js/app.min.js?_v=20220625145644"></script>
 </body>
 
 </html>
