--- a/portfolio/Gurme/index.html
+++ b/portfolio/Gurme/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220705173612">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220705182336">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,12 +20,12 @@
 					<div class="header__row">
 						<div class="header__menu menu">
 							<div class="header__logo">
-								<img src="img/header/logo.png" alt="Логотип">
+								<a href="index.html"><img src="img/header/logo.png" alt="Логотип"></a>
 							</div>
 							<button type="button" class="menu__icon icon-menu"><span></span></button>
 							<nav class="menu__body">
 								<ul class="menu__list">
-									<li class="menu__item"><a href="" class="menu__link">Бизнесу</a></li>
+									<li class="menu__item"><a href="item.html" class="menu__link">Бизнесу</a></li>
 									<li class="menu__item"><a href="" class="menu__link">Доставка</a></li>
 									<li class="menu__item"><a href="" class="menu__link">Оплата</a></li>
 									<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
@@ -332,7 +332,7 @@
 						<div class="header__item item-header">
 							<div class="item-header__body">
 								<div class="header__cat cat-header item-header__cat last">
-									<div class="cat-header__body">
+									<div class="cat-header__body last">
 										<ul class="cat-header__list">
 											<li class="cat-header__item"><a href="#" class="cat-header__link">Букеты из раков</a></li>
 											<li class="cat-header__item"><a href="#" class="cat-header__link">Букеты из колбасы</a>
@@ -476,7 +476,7 @@
 					</div>
 				</div>
 			</section>
-			<div class="stocks">
+			<section class="stocks">
 				<div class="stocks__container">
 					<div class="stocks__body">
 						<div class="stocks__row">
@@ -877,8 +877,8 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="benefits">
+			</section>
+			<section class="benefits">
 				<div class="benefits__container">
 					<div class="benefits__body">
 						<div class="benefits__item item-benefits">
@@ -1002,7 +1002,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -1086,17 +1086,7 @@
 			</div>
 		</footer>
 	</div>
-	<!-- <div id="popup" aria-hidden="true" class="popup">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрыть</button>
-			<div class="popup__text">
-				Text
-			</div>
-		</div>
-	</div>
-</div> -->
-	<script src="js/app.min.js?_v=20220705173612"></script>
+	<script src="js/app.min.js?_v=20220705182336"></script>
 </body>
 
 </html>
